fix(preset-mini): negative custom spacing

--- a/test/assets/output/preset-mini-targets.css
+++ b/test/assets/output/preset-mini-targets.css
@@ -75,7 +75,6 @@
 .peer:where(.child)~.peer-where-\[\.child\]\:m-1,
 .previous:is(div)+.previous-is-\[div\]\:m-1,
 .has-\[\:hover\]\:m-1:has(:hover){margin:0.25rem;}
-.-m-lg{margin:-1.125rem;}
 .\!m-\$c-m{margin:var(--c-m) !important;}
 .\[\&_\&\]\:m-13 .\[\&_\&\]\:m-13{margin:3.25rem;}
 .\[\&\:nth-child\(2\)\]\:m-10:nth-child(2){margin:2.5rem;}
@@ -87,11 +86,15 @@
 .children\:m-auto>*,
 .m-auto{margin:auto;}
 .all\:m1\/1 *{margin:100%;}
+.m--lg{margin:calc(var(--spacing-lg) * -1);}
+.m--md{margin:calc(calc(var(--spacing-md)) * -1);}
 .m-\[3em\]{margin:3em;}
 .m-0,
 .m-none{margin:0;}
 .m-1\/2{margin:50%;}
 .m-inherit{margin:inherit;}
+.m-lg{margin:var(--spacing-lg);}
+.m-md{margin:calc(var(--spacing-md));}
 *[open]:readonly .\[\*\[open\]\:readonly_\&\]\:\[\&\[open\]\:disabled\]\:m-17[open]:disabled{margin:4.25rem;}
 *>.\[\*\>\&\]\:m-12{margin:3rem;}
 .m-xy,
